# PlutoGNSS

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindGFLAGS.cmake  LimeGNSSBuildTypes.cmake
host/: CMakeLists.txt
host/cmake/: cmake_uninstall.cmake.in
host/cmake/Modules/: CopyGenerated.cmake  DetectLinuxDistro.cmake
package_br/: Config.in  plutognss.mk
src/: CMakeLists.txt
src/libs/: CMakeLists.txt  concurrent_queue.h  ip_regs_ad9361_dynamicbits.h  ip_regs_pps_samplestamp.h
tools/: CMakeLists.txt
tools/stserver/: CMakeLists.txt  stserver.cc
tools/test/: CMakeLists.txt  test.cc
